# psyche

./: .gitignore  Cargo.toml  Makefile.toml  README.md
amethyst-demo/: Cargo.toml  snapshot.json
amethyst-demo/resources/: display_config.ron  sprites.ron
amethyst-demo/src/: environment.rs  main.rs  shiba.rs
amethyst-demo/src/components/: mod.rs  obstacle.rs  shiba.rs  target.rs
amethyst-demo/src/data/: asset_database.rs  environment.rs  mod.rs  settings.rs  simulation.rs
amethyst-demo/src/states/: loading.rs  mod.rs  simulation.rs
amethyst-demo/src/systems/: environment.rs  mod.rs  shiba.rs
brain-activity/: Cargo.toml
brain-activity/src/: main.rs
cpp/TestToolset/: .gitignore  TestToolset.cpp  TestToolset.sln  TestToolset.vcxproj  pch.cpp  pch.h
demos/: .gitignore  Cargo.toml  README.md
demos/src/brain-activity/: main.rs
demos/src/spore/: main.rs
demos/src/spore/managers/: brains_manager.rs  items_manager.rs  mod.rs
demos/src/spore/managers/food_manager/: food.rs  mod.rs
demos/src/spore/managers/physics_manager/: body.rs  mod.rs  spatial.rs
demos/src/spore/managers/renderables_manager/: mod.rs  renderable.rs
demos/src/spore/managers/spores_manager/: mod.rs  spore.rs
demos/src/spore/world/: mod.rs  world_builder.rs
dotnet/: .gitignore  Psyche.NET.sln
dotnet/Psyche.NET/: Brain.cs  NAPI.cs  Psyche.NET.csproj
dotnet/Test/: Program.cs  Test.csproj
dotnet/Test/Properties/: AssemblyInfo.cs
psyche-amethyst/: Cargo.toml
psyche-amethyst/src/: lib.rs
psyche-capi/: Cargo.toml  cbindgen.toml
psyche-capi/src/: lib.rs
psyche-core/: Cargo.toml
psyche-core/src/: brain.rs  brain_builder.rs  config.rs  effector.rs  error.rs  id.rs  lib.rs  neuron.rs  offspring_builder.rs  sensor.rs  tests.rs
psyche-graphics/: Cargo.toml
psyche-graphics/src/: lib.rs  obj.rs
psyche-host/: Cargo.toml
psyche-host-core/: Cargo.toml
psyche-host-core/src/: lib.rs
psyche-host/src/: lib.rs
psyche-serde/: Cargo.toml
psyche-serde/src/: bytes.rs  json.rs  lib.rs  tests.rs  yaml.rs
psyche-simulator-cli/: .gitignore  Cargo.toml
psyche-simulator-cli/src/: main.rs  timeline.rs
psyche-utils/: Cargo.toml
psyche-utils/src/: grid.rs  lib.rs  switch.rs
psyche-utils/src/bucket_strainer/: bucket.rs  layer.rs  mod.rs  tests.rs
psyche-utils/src/bucket_strainer/rules/: bucket_limit_rule.rs  closure_rule.rs  fixed_score_rule.rs  mod.rs  mul_rule.rs  sum_rule.rs
src/: lib.rs
