[package]
name = "psyche"
version = "0.2.7"
authors = ["Patryk 'PsichiX' Budzynski <psichix@gmail.com>"]
edition = "2018"
description = "Psyche AI Toolset"
license = "MIT"
homepage = "https://github.com/PsichiX/psyche"
repository = "https://github.com/PsichiX/psyche"
documentation = "https://docs.rs/psyche"

[dependencies]
psyche-core = { version = "0.2", path = "./psyche-core" }
psyche-serde = { version = "0.2", path = "./psyche-serde" }
psyche-host = { version = "0.2", path = "./psyche-host" }
psyche-graphics = { version = "0.2", path = "./psyche-graphics" }

[workspace]
members = [
  "psyche-core",
  "psyche-serde",
  "psyche-host",
  "psyche-graphics",
  "psyche-capi",
  "psyche-simulator-cli",
]
exclude = [
  "demos",
]
