[package]
name = "psyche"
version = "0.2.15"
authors = ["Patryk 'PsichiX' Budzynski <psichix@gmail.com>"]
edition = "2018"
description = "Psyche AI Toolset"
license = "MIT"
homepage = "https://github.com/PsichiX/psyche"
repository = "https://github.com/PsichiX/psyche"
documentation = "https://docs.rs/psyche"
exclude = [
  "demos",
  "media",
  "cpp",
  "dotnet",
  "dist",
]

[dependencies]
psyche-core = { version = "0.2", path = "./psyche-core" }
psyche-utils = { version = "0.2", path = "./psyche-utils" }
psyche-serde = { version = "0.2", path = "./psyche-serde" }
psyche-host = { version = "0.2", path = "./psyche-host" }
psyche-graphics = { version = "0.2", path = "./psyche-graphics" }

[workspace]
members = [
  "psyche-core",
  "psyche-serde",
  "psyche-host",
  "psyche-graphics",
  "psyche-capi",
  "psyche-simulator-cli",
  "psyche-utils",
]
exclude = [
  "demos",
  "media",
  "cpp",
  "dotnet",
  "dist",
]
