[package]
name = "amethyst-demo"
version = "0.2.18"
authors = ["Patryk 'PsichiX' Budzynski <psichix@gmail.com>"]
edition = "2018"

[dependencies]
amethyst = "0.10"
psyche-amethyst = { version = "0.2", path = "../psyche-amethyst", features = ["parallel"] }
psyche = { version = "0.2", path = "..", features = ["parallel"] }
clap = "2.32"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
