[package]
name = "psyche-amethyst"
version = "0.2.18"
authors = ["Patryk 'PsichiX' Budzynski <psichix@gmail.com>"]
edition = "2018"
description = "Amethyst game engine integration for Psyche AI Toolset"
license = "MIT"
homepage = "https://github.com/PsichiX/psyche"
repository = "https://github.com/PsichiX/psyche"
documentation = "https://docs.rs/psyche-amethyst"

[features]
# default = ["parallel"]
parallel = ["psyche/parallel"]

[dependencies]
psyche = { version = "0.2", path = ".." }
amethyst = "0.10"
