[package]
name = "psyche-capi"
version = "0.2.12"
authors = ["Patryk 'PsichiX' Budzynski <psichix@gmail.com>"]
edition = "2018"
description = "C API module for Psyche AI Toolset"
license = "MIT"
homepage = "https://github.com/PsichiX/psyche"
repository = "https://github.com/PsichiX/psyche"
documentation = "https://docs.rs/psyche-capi"

[dependencies]
psyche = { version = "0.2", path = ".." }
