[package]
name = "psyche-core"
version = "0.2.6"
authors = ["Patryk 'PsichiX' Budzynski <psichix@gmail.com>"]
edition = "2018"
description = "Core module for Psyche AI Toolset"
license = "MIT"
homepage = "https://github.com/PsichiX/psyche"
repository = "https://github.com/PsichiX/psyche"
documentation = "https://docs.rs/psyche-core"

[dependencies]
uuid = { version = "0.7", features = ["serde", "v4"] }
rand = "0.5"
serde = { version = "1.0", features = ["derive"] }
rayon = "1.0"
