[package]
name = "psyche-host"
version = "0.2.12"
authors = ["Patryk 'PsichiX' Budzynski <psichix@gmail.com>"]
edition = "2018"
description = "Host module for Psyche AI Toolset"
license = "MIT"
homepage = "https://github.com/PsichiX/psyche"
repository = "https://github.com/PsichiX/psyche"
documentation = "https://docs.rs/psyche-host"

[dependencies]
psyche-core = { version = "0.2", path = "../psyche-core" }
