[package]
name = "psyche-serde"
version = "0.1.0"
authors = ["Patryk 'PsichiX' Budzynski <psichix@gmail.com>"]
edition = "2018"
description = "Serialize/Deserialize module for Psyche AI Toolset"
license = "MIT"

[dependencies]
psyche-core = { version = "0.1", path = "../psyche-core" }
serde_json = "1.0"
bincode = "1.1"
serde_yaml = "0.8"
