[package]
name = "psyche-serde"
version = "0.2.18"
authors = ["Patryk 'PsichiX' Budzynski <psichix@gmail.com>"]
edition = "2018"
description = "Serialize/Deserialize module for Psyche AI Toolset"
license = "MIT"
homepage = "https://github.com/PsichiX/psyche"
repository = "https://github.com/PsichiX/psyche"
documentation = "https://docs.rs/psyche-serde"

[features]
# default = ["parallel"]
parallel = ["psyche-core/parallel"]

[dependencies]
psyche-core = { version = "0.2", path = "../psyche-core" }
serde_json = "1.0"
bincode = "1.1"
serde_yaml = "0.8"
