[package]
name = "psyche-utils"
version = "0.2.18"
authors = ["Patryk 'PsichiX' Budzynski <psichix@gmail.com>"]
edition = "2018"
description = "Utils module for Psyche AI Toolset"
license = "MIT"
homepage = "https://github.com/PsichiX/psyche"
repository = "https://github.com/PsichiX/psyche"
documentation = "https://docs.rs/psyche-utils"

[dependencies]
